@@ -31,6 +31,7 @@ interface:
 
 performance improvements:
 - performance improvements in prop_vbounds
+- child selection rules now get also applied when the relaxation value is equal to the bound changed in branching
 
 fixed bugs:
 - fixed bug in propagation of indicator constraints: cannot fix slack variable to 0 if linear constraint is disabled/not active
